fixed overflow

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -6,9 +6,8 @@ p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
   margin: 0;
   padding: 0;
+  overflow: visible;
 }
-
-
 
 /**
  * Basic styling
